[package]
name = "taiko-fast-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
